--- a/src/assets/less/global.less
+++ b/src/assets/less/global.less
@@ -106,3 +106,39 @@ h3  {
     }
 }
 
+.fancybox-close {
+    background: url("plugins/fancybox/fancybox-close.png") center no-repeat;
+    width: 25px;
+    height: 25px;
+    top: -2px;
+    right: -40px;
+}
+
+.fancybox-title-inside-wrap {
+    text-align: center;
+    padding-top: 17px;
+    font-size: 0.875rem;
+}
+
+.fancybox-nav {
+    width: 50px;
+
+    span {
+        visibility: visible;
+        width: 27px;
+        height: 47px;
+    }
+}
+
+.fancybox-next span {
+    background: url("plugins/fancybox/fancy-slider-right-arrow.png") center no-repeat;
+    right: -189px;
+}
+
+.fancybox-prev span {
+    background: url("plugins/fancybox/fancy-slider-left-arrow.png") center no-repeat;
+    left: -189px;
+}
+
+
+
