--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,4 +1,78 @@
 <!-- - - - - - - - - - footer - - - - - - - - - -->
 <div class="footer">
+    <div class="container">
+        <div class="footer-top">
+            <div class="footer-columns-wrap">
+                <div class="footer-column">
+                    <div class="footer-title">
+                        Меню сайта:
+                    </div>
+                    <ul>
+                        <li><a href="#">Обучение яхтингу</a></li>
+                        <li><a href="#">Регаты</a></li>
+                        <li><a href="#">Аренда яхт</a></li>
+                        <li><a href="#">Продажа яхт</a></li>
+                        <li><a href="#">Мероприятия</a></li>
+                        <li><a href="#">О нас</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <div class="footer-title">
+                        Адрес:
+                    </div>
+                    <div class="footer-column__address">
+                        Минская облась, Минский район,<br>
+                        Ждановичский с/с, 48/2,<br>
+                        район д. Заречье-1
+                    </div>
+                </div>
+                <div class="footer-column">
+                    <div class="footer-title">
+                        Контакты:
+                    </div>
+                    <div class="footer-column__contacts">
+                        <a href="tel:+375296960203" class="footer-column__phone">+375 (29) 696-02-03</a>
+                        <a href="mailto:info@iyc.by" class="footer-column__mail">info@iyc.by</a>
+                        <a href="skype:iycenter" class="footer-column__skype">iycenter</a>
+                    </div>
+                </div>
+                <div class="footer-column">
+                    <div class="footer-title">
+                        Координаты:
+                    </div>
+                    <div class="footer-column__location">
+                        53.964646, 27.394736
+                    </div>
+                </div>
+            </div>
+            <div class="footer-top-aside">
+                <div class="footer-social">
+                    <div class="footer-title">Мы в социальных сетях:</div>
+                    <a href="#"><img src="assets/images/social/facebook.png" alt=""></a>
+                    <a href="#"><img src="assets/images/social/vk.png" alt=""></a>
+                    <a href="#"><img src="assets/images/social/youtube.png" alt=""></a>
+                    <a href="#"><img src="assets/images/social/instagram.png" alt=""></a>
+                    <a href="#"><img src="assets/images/social/twitter.png" alt=""></a>
+                </div>
 
+                <div class="footer-pay">
+                    <div class="footer-title">Мы принимаем:</div>
+                    <a href="#"><img src="assets/images/cards/visa.png" alt=""></a>
+                    <a href="#"><img src="assets/images/cards/master-card.png" alt=""></a>
+                    <a href="#"><img src="assets/images/cards/maestro.png" alt=""></a>
+                    <a href="#"><img src="assets/images/cards/rashet.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="copyright">
+                &copy; 2017 Международный яхтенный центр (IYC). Все права защищены
+            </div>
+            <a href="#">Карта сайта</a>
+            <div class="developer">
+                Разработка сайта:
+                <img src="assets/images/webcompany-logo.png" alt="">
+            </div>
+        </div>
+    </div>
 </div><!-- /footer -->
